# agent-shell

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  spec.md
docs/: config.md  security.md
docs/superpowers/plans/: 2026-07-03-agentsh-implementation.md
src/agentsh/: __init__.py  agent_loop.py  app.py  classifier.py  config.py  events.py  history_security.py  limits.py  main.py  models.py  permissions.py  registry.py  repl.py  ui_protocol.py
src/agentsh/agent/: __init__.py  _system.py  anthropic.py  base.py  caching.py  google.py  openai.py  openrouter.py  protocol.py  router.py
src/agentsh/context/: __init__.py  builder.py  protocol.py  sanitize.py
src/agentsh/context/providers/: __init__.py  docker.py  environment.py  filesystem.py  git.py  go.py  history.py  kubernetes.py  network.py  node.py  python.py  python_env.py  rust.py
src/agentsh/shell/: __init__.py  _detect.py  _registry.py  bash.py  protocol.py
src/agentsh/shell/plugin/: __init__.py  _base.py  _stderr_file.py  _stream.py  bash.py  cmd.py  fish.py  nushell.py  powershell.py  zsh.py
src/agentsh/tools/: __init__.py  _paths.py  protocol.py  read_file.py  run_command.py  write_file.py
tests/: test_agent_loop.py  test_app.py  test_classifier.py  test_config.py  test_events.py  test_history_security.py  test_import_cycle.py  test_limits.py  test_main.py  test_models.py  test_permission_key_whitespace.py  test_permission_keys.py  test_permissions.py  test_registry.py  test_repl.py
tests/agent/: test_anthropic.py  test_base.py  test_build_system.py  test_caching.py  test_google.py  test_openai.py  test_openrouter.py
tests/context/: test_builder.py  test_providers.py  test_resolver.py  test_sanitize.py  test_windows_shell_providers.py
tests/shell/: test_bash.py  test_cmd.py  test_factory.py  test_fish.py  test_nushell.py  test_plugins.py  test_powershell.py  test_render_prompt.py  test_stderr_file.py  test_stream.py  test_zsh.py
tests/tools/: test_read_file.py  test_run_command.py  test_write_file.py
