[project]
name = "agentsh"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40",
  "openai>=1.50",
  "prompt-toolkit>=3.0",
]

[project.scripts]
agentsh = "agentsh.main:main"

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsh"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
